# matrix-authentication-service

./: .codecov.yml  .dockerignore  .editorconfig  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  biome.json  book.toml  clippy.toml  deny.toml  docker-bake.hcl  localazy.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/aaguid/: Cargo.toml
crates/aaguid-codegen/: Cargo.toml
crates/aaguid-codegen/src/: main.rs
crates/aaguid/src/: data.rs  lib.rs
crates/axum-utils/: Cargo.toml
crates/axum-utils/src/: client_authorization.rs  cookies.rs  csrf.rs  error_wrapper.rs  fancy_error.rs  http_client_factory.rs  jwt.rs  language_detection.rs  lib.rs  log_context.rs  sentry.rs  session.rs  user_authorization.rs
crates/build-info/: Cargo.toml  build.rs
crates/build-info/src/: lib.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: app_state.rs  lifecycle.rs  main.rs  server.rs  shutdown.rs  sync.rs  telemetry.rs  util.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  schema.rs  util.rs
crates/context/: Cargo.toml
crates/context/src/: fmt.rs  future.rs  layer.rs  lib.rs  service.rs
crates/data-model/: Cargo.toml
crates/data-model/examples/: ua-parser.rs
crates/data-model/src/: clock.rs  jwks_cache.rs  lib.rs  policy_data.rs  site_config.rs  tchap_config.rs  tokens.rs  user_agent.rs  users.rs  utils.rs  version.rs
crates/email/: Cargo.toml
crates/email/src/: lib.rs  mailer.rs  transport.rs
crates/handlers/: Cargo.toml
crates/handlers/src/: captcha.rs  cleanup_tests.rs  client_ip.rs  health.rs  lib.rs  passwords.rs  preferred_language.rs  rate_limit.rs  session.rs  test_utils.rs  webauthn.rs
crates/http/: Cargo.toml
crates/http/src/: client.rs  ext.rs  lib.rs  reqwest.rs  service.rs
crates/http/tests/: client_layers.rs
crates/i18n/: Cargo.toml
crates/i18n-scan/: Cargo.toml
crates/i18n-scan/src/: key.rs  main.rs  minijinja.rs
crates/i18n/src/: lib.rs  translations.rs  translator.rs
crates/iana/: Cargo.toml
crates/iana-codegen/: Cargo.toml
crates/iana-codegen/src/: gen.rs  generation.rs  jose.rs  main.rs  oauth.rs  traits.rs
crates/iana/src/: jose.rs  lib.rs  oauth.rs
crates/jose/: Cargo.toml
crates/jose/src/: base64.rs  claims.rs  constraints.rs  lib.rs
crates/jose/tests/: generate.py  jws.rs
crates/jwks-cache/: Cargo.toml
crates/jwks-cache/src/: lib.rs
crates/jwks-cache/tests/: fetcher.rs
crates/keystore/: Cargo.toml
crates/keystore/src/: encrypter.rs  lib.rs
crates/keystore/tests/: generate.sh  keystore.rs
crates/listener/: Cargo.toml
crates/listener/src/: lib.rs  maybe_tls.rs  server.rs  shutdown.rs  unix_or_tcp.rs
crates/matrix/: Cargo.toml
crates/matrix-synapse/: Cargo.toml
crates/matrix-synapse/src/: error.rs  legacy.rs  lib.rs  modern.rs
crates/matrix/src/: lib.rs  mock.rs  readonly.rs
crates/oauth2-types/: Cargo.toml
crates/oauth2-types/src/: errors.rs  lib.rs  oidc.rs  pkce.rs  requests.rs  response_type.rs  scope.rs  test_utils.rs  webfinger.rs
crates/oidc-client/: Cargo.toml
crates/oidc-client/src/: error.rs  http_service.rs  lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs  model.rs
crates/router/: Cargo.toml
crates/router/src/: endpoints.rs  lib.rs  traits.rs  url_builder.rs
crates/storage/: Cargo.toml
crates/storage-pg/: Cargo.toml  build.rs
crates/storage-pg/.sqlx/: query-041c4ddff9b40ff5ba16c9aa1dd9c721998de6e5798e4423df9063519ee5ac4d.json  query-041f1e8a7d43a085b4dc41fe9f7e83d3c4fd29f76b0dad1564a51840c3cfa7a8.json  query-05b4dd39521eaf4e8e3c21654df67c00c8781f54054a84b3f3005b65cbc2a14a.json  query-06d67595eeef23d5f2773632e0956577d98074e244a35c0d3be24bc18d9d0daa.json  query-07cd2da428f0984513b4ce58e526c35c9c236ea8beb6696e5740fa45655e59f3.json  query-093d42238578771b4183b48c1680ba438b6b18306dfe1454fa4124c0207b3deb.json  query-0a5edf3c6ef2c493b605f537a7b5f8afd0e2a75125197f157aab6cb10a8b3faa.json  query-0a8d2a38c62228a6995ad9136c0c19b0c7f75e11a516a43a1dc108c72945eb95.json  query-0ac1abe7161c0e58d76d8b1e4de293c35ba4503855d52a5b62b6e86b126362f5.json  query-0dc81401c212d7cf99b50a7de2e276cc3308847141a37d1856d7b007c03863e5.json  query-0e1bce56e15751d82a622d532b279bfc50e22cb12ddf7495c7b0fedca61f9421.json  query-0e45995714e60b71e0f0158500a63aa46225245a04d1c7bc24b5275c44a6d58d.json  query-0f2ea548e00b080502edc04ee97ea304d43c336ce80723789ff3e66c0dd4d86c.json  query-0ffcf354f8b7f00691812d4b8d86999d97ebe799d87737b4dfec1585edc0d0f9.json  query-109f0c859e123966462f1001aef550e4e12d1778474aba72762d9aa093d21ee2.json  query-12c4577701416a9dc23708c46700f3f086e4e62c6de9d6864a6a11a2470ebe62.json  query-1780630658e5e6a4f2206448421f766b60cbe587b6d4cd146ddb02982a8d8a7e.json  query-1792c832f36c6d421c68ffa54dd9fdd99193886ebf80f6b157c9c26c4a9bea17.json  query-17b1058e824d8ad605700b057b4cb1ecca0155f9742d8b0454c19cae818b44a6.json  query-17e390ee0b52d0c1c60b0951811fa6c8385fad48d470685353d074e34f5d16c9.json  query-17e940733980ba905b1fed4b065e24a2decaf55cddc97703f548bbd536db919f.json  query-182ff71d6007b3607761a48971e43b6bdf6a41896d787a13be3399022fe5e43d.json  query-188a4aeef5a8b4bf3230c7176ded64d52804848df378dc74f8f54ec4404e094e.json  query-199819516dce285771a75a48a687b285225aeae7a4d1ca91084ae84f25dcbbec.json  query-1aa4c541af7e12431a58f43a1882a14314cc1833a6be272056e09d07c21ba9ef.json  query-1ba7c2d8929e3c7d9af7afe92015d3a07eb4609827d97b3477b020059c8a2d4f.json  query-1d758df58ccfead4cb39ee8f88f60b382b7881e9c4ead31ff257ff5ff4414b6e.json  query-1d9c478c7a5e3a672610376a290b9a1afaaa6fa2fb137f7307002f058b206dbd.json  query-21006ad3f9c752d475fd9d45170067464b96fd33d7c137702d11db4bc30171a8.json  query-212e0ce75c5e8b73e95b3a9505365192f1b5c133fcda65894add35dc5ae62295.json  query-2144de68dcd06fc98a0209814d9bda03573862a8e54714399a99653e25081b84.json  query-21b9e39ffd89de288305765c339a991d2471667cf2981770447cde6fd025fbb7.json  query-23d5fcd8bf611dc7279bef0d66ce05461c3c1f43f966fee3a80ae42540783f08.json  query-245cab1cf7d9cf4e94cdec91ecb4dc8e678278121efbe1f66bcdc24144d684d0.json  (+273 more)
crates/syn2mas/: Cargo.toml
crates/tasks/: Cargo.toml
(+1221 files in other folders)
